@@ -1,5 +1,14 @@
 1999-01-06  Nat Friedman  <nat@nat.org>
 
+	* gnome-app-helper.h (GNOMEUIINFO_MENU_NEW_ITEM): Add another
+ 	parameter for the menu item description.
+	(GNOMEUIINFO_MENU_UNDO_ITEM): Removed an extra parameter.
+
+	Also changed "document" to "file" in all the menu item
+ 	descriptions.
+
+1999-01-06  Nat Friedman  <nat@nat.org>
+
 	* gnome-app-helper.h: Added the little tool-tips-like descriptions
  	of each standard menu item's function.  Cleaned the macros up a
  	bit and grouped them according to the menu in which they belong.
